# xray-tui

./: .gitignore  Cargo.toml  boundary.yaml  requirements.yaml
.plan/: ORDER.md  STATUS.md  TEST_INTEGRATION.md  TOOLS.md
.plan/xray-app/: IMPL.md  TEST.md
.plan/xray-model/: IMPL.md  TEST.md
.plan/xray-services/: IMPL.md  TEST.md
.plan/xray-ui/: IMPL.md  TEST.md
src/: Cargo.toml  main.rs
src/model/: Cargo.toml
src/model/src/: config.rs  lib.rs  routing.rs  settings.rs  ssl.rs
src/model/src/config/: common.rs  mod.rs  protocol.rs  stream.rs  tests.rs
src/services/: Cargo.toml
src/services/src/: acme.rs  config_manager.rs  error.rs  journal.rs  lib.rs  storage.rs  subscription.rs  systemd.rs  xray.rs
src/services/src/subscription/: mod.rs  tests.rs
src/ui/: Cargo.toml
src/ui/src/: app.rs  lib.rs  render.rs  screens.rs
src/ui/src/screens/: confirm.rs  dashboard.rs  inbound_list.rs  log_viewer.rs  others.rs  routing_editor.rs  settings_page.rs  share_export.rs  ssl_manager.rs  user_manager.rs  wizard.rs
src/ui/src/screens/wizard/: builder.rs  logic.rs  state.rs  templates.rs  ui.rs
src/ui/src/widgets/: status_bar.rs
