[package]
name = "xray-services"
version = "0.1.0"
edition = "2021"

[dependencies]
xray-model = { path = "../model" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
duct = "0.13"
thiserror = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
